--- a/index.html
+++ b/index.html
@@ -4,14 +4,257 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Panda shop</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Hello, world!</h1>
+    <!-- 
+    heading part
+ -->
+
+    <header>
+        <nav class="navbar navbar-expand-lg bg-light shadow-lg fixed-top">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="" class="img-fluid">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#menu-shoe">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#menu-backpack">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#menu-subscribe">Subscribe</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <!-- ------------
+            banner part
+        ---------------------- -->
+        <div id="carouselExampleControls" class="carousel slide container" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-lg-7 col-sm-12 d-flex align-items-center ps-lg-5">
+                            <div class="responsive-banner">
+                                <h2>Cool Dude headphone </h2>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front
+                                    of funky world.</p>
+                                <h1>$400</h1>
+                                <a href="#" class="btn all-button">BUY NOW</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-sm-12 p-4">
+                            <img src="images/banner-images/headphone.png" class="d-block  img-fluid" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-sm-12 d-flex align-items-center ps-lg-5">
+                            <div>
+                                <h2>Mega LCD TV For Sports</h2>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front
+                                    of funky world.</p>
+                                <h1>$1200</h1>
+                                <a href="#" class="btn all-button ">BUY NOW</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-sm-12 p-4">
+                            <img src="images/banner-images/tv.png" class="d-block  img-fluid" alt="...">
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-lg-7 col-sm-12 d-flex align-items-center ps-lg-5">
+                            <div>
+                                <h2>X-Box for your living room</h2>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front
+                                    of funky world.</p>
+                                <h1>$600</h1>
+                                <a href="#" class="btn all-button ">BUY NOW</a>
+                            </div>
+                        </div>
+                        <div class="col-lg-5 col-sm-12 p-4">
+                            <img src="images/banner-images/xbox.png" class="d-block  img-fluid" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!-- ------------
+            banner part end
+        ---------------------- -->
+
+
+        <!-- categories part start -->
+
+        <section class="container categories my-5">
+            <div class="row d-flex justify-content-between">
+                <div
+                    class="mb-3 col-lg-3 col-md-6 col-sm-12 d-flex bg-warning align-items-center justify-content-evenly rounded-3 py-2 ">
+                    <h1 class="text-white"> Watch </h1>
+                    <img class="img-fluid" src="images/categories/watch.png" alt="">
+                </div>
+                <div
+                    class="mb-3 col-lg-3 col-md-6 col-sm-12 d-flex bg-primary align-items-center justify-content-evenly rounded-3 py-2">
+                    <h1 class="text-white"> Shoes</h1>
+                    <img class="img-fluid" src="images/categories/shoes.png" alt="">
+                </div>
+                <div
+                    class="mb-3 col-lg-3 col-md-6 col-sm-12 d-flex bg-info align-items-center justify-content-evenly rounded-3 py-2 ">
+                    <h1 class="text-white">Backpack</h1>
+                    <img class="img-fluid" src="images/categories/bag.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- categories part end -->
+        <!-- card section start -->
+        <section id="menu-shoe" class="shoes-section container my-5">
+            <h1>Shoes</h1>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 rounded-3 shadow-lg mb-4">
+                    <div class="card border border-0">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Supply 350</h3>
+                            <h1>$160</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer. </p>
+                            <a class="btn  all-button" href="#">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 rounded-3 shadow-lg mb-4 ">
+                    <div class="card border border-0">
+                        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Nike 360</h3>
+                            <h1>$160</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer. </p>
+                            <a class="btn  all-button" href="#">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 rounded-3 shadow-lg mb-4">
+                    <div class="card border border-0">
+                        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Red Airmax</h3>
+                            <h1>$160</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer. </p>
+                            <a class="btn  all-button" href="#">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- backpack part -->
+        <section class="Bagpack-section container my-5">
+            <h1>Backpack</h1>
+            <div id="menu-backpack" class="row">
+                <div class="col-lg-4 col-md-6 col-sm-12 rounded-3 shadow-lg mb-4">
+                    <div class="card border border-0">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Red Laltu Bag</h3>
+                            <h1>$100</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer. </p>
+                            <a class="btn  all-button" href="#">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 rounded-3 shadow-lg mb-4">
+                    <div class="card border border-0">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Nike D60</h3>
+                            <h1>$116</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer. </p>
+                            <a class="btn  all-button" href="#">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 rounded-3 shadow-lg mb-4">
+                    <div class="card border border-0">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h3 class="card-title">Airmax y1</h3>
+                            <h1>$225</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer. </p>
+                            <a class="btn  all-button" href="#">Buy Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- card section end-->
+
+        <section id="menu-subscribe" class="container d-flex justify-content-center text-sent-part">
+            <div>
+                <h2>LET'S STAY IN TOUCH</h2>
+                <p>Get updates on sales, specials and more</p>
+                <form>
+                    <div class="mb-3">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    </div>
+                    <button type="submit" class="btn all-button">Submit</button>
+                </form>
+            </div>
+        </section>
+
+    </main>
+
+    <footer class="text-center py-4">
+        <small>©2023. Panda Commerce. All rights reserved by Tanvir</small>
+    </footer>
+
+    <!-- -------
+    script part
+-------------------  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
